--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Onion Governance
+author: T.R. Eimer & J. Luimers
 email: oniongovernance@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  In this project, we want to examine how property rights are defined and enforced on the dark net
+  without traditional state authorities being able to enforce or control them. 
+  From this perspective, we ask ourselves how the emerging social order on the dark net can be characerized.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
